--- a/templates/term/browse_term.html
+++ b/templates/term/browse_term.html
@@ -1,4 +1,4 @@
-{% extends 'term/base.html' %}
+{% extends 'base.html' %}
 
 {% block head %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
