--- a/templates/term/idiom_view.html
+++ b/templates/term/idiom_view.html
@@ -1,4 +1,4 @@
-{% extends 'term/base.html' %}
+{% extends 'base.html' %}
 
 {% block head %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
