--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>Aprenda Idiomas - Exako</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/htmx.org@2.0.2"></script>
     <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
     {% block head %} {% endblock %}
     <style>
@@ -56,7 +57,7 @@
             </ul>
         </aside>
         <main class="flex-1 ml-80 p-8">
-            <div class="max-w-6xl mx-auto relative">
+            <div class="w-11/12 mx-auto relative">
                 {% block content %} {% endblock %}
             </div>  
         </main>
