--- a/templates/term/term_view.html
+++ b/templates/term/term_view.html
@@ -1,4 +1,4 @@
-{% extends 'term/base.html' %}
+{% extends 'base.html' %}
 
 {% block head %}
 <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css" rel="stylesheet"/>
