--- a/templates/exercise/exercise_home.html
+++ b/templates/exercise/exercise_home.html
@@ -213,7 +213,7 @@
         <div class="relative">
             <select id="languageSelect" class="appearance-none bg-indigo-50 border border-indigo-300 text-indigo-700 py-2 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-indigo-500 transition duration-150 ease-in-out w-48">
                 <option value="">Todos os Idiomas</option>
-                <option value="english">Inglês</option>
+                <option value="ENGLISH_USA">Inglês</option>
                 <option value="spanish">Espanhol</option>
                 <option value="french">Francês</option>
                 <option value="german">Alemão</option>
