--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="https://unpkg.com/htmx.org@2.0.2"></script>
-    <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
     {% block head %} {% endblock %}
+    <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
         body {
@@ -50,7 +50,7 @@
                     </a>
                 </li>
                 <li>
-                    <a id="menu-exercise" href="#" class="block py-3 px-2 md:px-6 hover:bg-indigo-600 rounded transition duration-300 flex items-center text-sm md:text-lg">
+                    <a id="menu-exercise" href="{% url 'exercise:home' %}" class="block py-3 px-2 md:px-6 hover:bg-indigo-600 rounded transition duration-300 flex items-center text-sm md:text-lg">
                         <i class="fas fa-dumbbell mr-0 md:mr-3"></i> <span class="hidden md:inline">Exercícios</span>
                     </a>
                 </li>
