--- a/templates/exercise/exercises/exercise_base.html
+++ b/templates/exercise/exercises/exercise_base.html
@@ -16,6 +16,7 @@
         </h2>
         <div id="exercise-area" class="w-2/3">
             {% block exercise_content %}{%endblock %}
+            <div id="exercise-result-message" class="text-center font-bold mt-4"></div>
         </div>
     </div>
     
