--- a/templates/exercise/exercise_home.html
+++ b/templates/exercise/exercise_home.html
@@ -6,16 +6,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-<!-- <script type="text/hyperscript" src="{% static 'hs/exercise._hs/' %}"></script> -->
-<script type="text/hyperscript" src="{% static 'not_minified/exercise/options._hs/' %}"></script>
-<script type="text/hyperscript" src="{% static 'not_minified/exercise/exercise._hs/' %}"></script>
-<script type="text/hyperscript" src="{% static 'not_minified/exercise/exercises/order_sentence._hs/' %}"></script> 
-<script type="text/hyperscript" src="{% static 'not_minified/exercise/exercises/listen._hs/' %}"></script> 
-<script type="text/hyperscript" src="{% static 'not_minified/exercise/exercises/mchoice._hs/' %}"></script> 
-<script type="text/hyperscript" src="{% static 'not_minified/exercise/exercises/image_mchoice._hs/' %}"></script> 
-<script type="text/hyperscript" src="{% static 'not_minified/exercise/exercises/image_mchoice_text._hs/' %}"></script> 
-<script type="text/hyperscript" src="{% static 'not_minified/exercise/exercises/connection._hs/' %}"></script> 
-<script type="text/hyperscript" src="{% static 'not_minified/exercise/exercises/speak._hs/' %}"></script> 
+<script type="text/hyperscript" src="{% static 'hs/exercise._hs/' %}"></script>
 {% endblock %}
 
 {% block style%}
@@ -46,9 +37,9 @@
 
 {% block content %}
 <div id="exercise-main-content" _="install Exercise">
-    <section class="mb-14">
-        <h2 class="text-3xl font-bold mb-6 text-indigo-900 text-center">Exercícios Disponíveis</h2>
-        <div class="exercises-carousel bg-white rounded-xl shadow-lg">
+    <section class="mb-14 bg-white rounded-xl shadow-lg">
+        <h2 class="text-3xl font-bold mb-6 text-indigo-900 text-center pt-8">Exercícios Disponíveis</h2>
+        <div class="exercises-carousel">
             {% for type, info in exercises.items %}
             <div>
                 <div class="exercise-card p-6 flex flex-col items-center justify-center rounded-lg cursor-pointer">
