--- a/templates/exercise/exercises/image_mchoice_text.html
+++ b/templates/exercise/exercises/image_mchoice_text.html
@@ -13,23 +13,8 @@
             {% endfor %}
         </div>
     </div>
-    <div class="flex justify-center space-x-4 mb-4">
-        <button _="on click 
-            if getAnswer() != null
-                add @disabled to me
-                add @disabled to #next-button
-                call checkAnswer('{{ url }}')
-            end
-        end
-        "  
-        class="bg-indigo-600 text-white px-6 py-2 rounded-md hover:bg-indigo-700 transition duration-300 flex items-center disabled:opacity-50 disabled:cursor-not-allowed">
-            <i class="fas fa-check mr-2"></i> Verificar
-        </button>
-        <button id="next-button" _="on click call loadExercise()" class="bg-yellow-500 text-white px-6 py-2 rounded-md hover:bg-yellow-600 transition duration-300 flex items-center disabled:opacity-50 disabled:cursor-not-allowed">
-            <i class="fas fa-forward mr-2"></i> Pular
-        </button>
-    </div>
-    <div id="exercise-result-message" class="text-center font-bold mt-4"></div>
+
+    {% include 'exercise/partials/exercise_buttons.html' %}
 </div>
 {% endblock %}
 
