--- a/templates/exercise/exercises/speak.html
+++ b/templates/exercise/exercises/speak.html
@@ -32,28 +32,7 @@
             </div>
         </div>
     </div>
-           
-    <div class="flex justify-center space-x-4">
-        <button _="
-        on click 
-            call checkAnswer('{{ url }}', response) then put it into exerciseResult
-            if exerciseResult != null
-                add @disabled to me
-                add @disabled to #next-button 
-                add @disabled to #record-discard
-                set responseJson to exerciseResult.json()
-                call updateStats(responseJson.correct)
-                call setMessageContent(responseJson)
-                wait 4s then call loadExercise()
-            end
-        end
-        "  class="bg-indigo-600 text-white px-6 py-2 rounded-md hover:bg-indigo-700 transition duration-300 flex items-center disabled:opacity-50 disabled:cursor-not-allowed">
-            <i class="fas fa-check mr-2"></i> Verificar
-        </button>
-        <button id="next-button" _="on click call loadExercise()" class="bg-yellow-500 text-white px-6 py-2 rounded-md hover:bg-yellow-600 transition duration-300 flex items-center disabled:opacity-50 disabled:cursor-not-allowed">
-            <i class="fas fa-forward mr-2"></i> Pular
-        </button>
-    </div>
-    <div id="exercise-result-message" class="text-center font-bold mt-4"></div>
+
+    {% include 'exercise/partials/exercise_buttons.html' %}
 </div>
 {% endblock %}
